# dagger-python-app

./: pyproject.toml  requirements.txt
.dagger/src/book/: main.py
.github/workflows/: dagger.yml
