[project]
name = "dagger-python-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.68.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.0.0",
    "pytest>=8.3.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.0",
]
